# pixagram-upscaler

./: .npmignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
src/: crt-gpu.ts  hex-gpu.ts  index.ts  types.ts  wasm-wrapper.ts  xbrz-gpu.ts
src/wasm/: crt.rs  hex.rs  lib.rs
src/wasm/xbrz/: blend.rs  kernel.rs  matrix.rs  mod.rs  oob_reader.rs  pixel.rs  scaler.rs  ycbcr_lookup.rs
