[package]
name = "renderart"
version = "0.1.4"
edition = "2021"
authors = []
description = "High-performance pixel art rendering engines for WebAssembly"
license = "MIT"
repository = ""

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/wasm/lib.rs"

[dependencies]
wasm-bindgen = "0.2.92"
parking_lot = "0.12"

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-simd"]
